# MarketDataFetchPackage

./: CODE_STYLE.md  PLAN.md  README.md  pyproject.toml  pytest.ini
market_data_fetch/: __init__.py
market_data_fetch/contracts/: __init__.py
market_data_fetch/contracts/usdt_perp/: __init__.py  interface.py
market_data_fetch/core/: __init__.py  coordinator.py  errors.py  queries.py  registry.py
market_data_fetch/exchanges/: __init__.py
market_data_fetch/exchanges/binance/: __init__.py  usdt_perp.py
market_data_fetch/exchanges/bitget/: __init__.py  usdt_perp.py
market_data_fetch/exchanges/bybit/: __init__.py  usdt_perp.py
market_data_fetch/exchanges/okx/: __init__.py  usdt_perp.py
market_data_fetch/models/: __init__.py  shared.py  usdt_perp.py
scripts/: compare_funding_history.py  compare_funding_rates.py  compare_index_klines.py  compare_instruments.py  compare_latest_index_price.py  compare_latest_mark_price.py  compare_latest_premium_index.py  compare_latest_ticker.py  compare_mark_klines.py  compare_open_interest.py  compare_premium_klines.py  compare_price_klines.py  compare_utils.py
tests/: conftest.py  provider_cases.py  test_binance_usdt_perp.py  test_bybit_usdt_perp.py  test_ccxt_parity.py  test_okx_time_filters.py  test_time_filter_windows.py  test_usdt_perp_providers.py
